# dl_hpc_starter_pack

./: .gitignore  README.md  experiments  jobs.sh  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: cluster.py  command_line_arguments.py  trainer.py  utils.py
src/dlhpcstarter/: __main__.py  cluster.py  command_line_arguments.py  main.py  trainer.py  utils.py
src/dlhpcstarter/tools/ext/: collect_env_details.py
src/dlhpcstarter/tools/mods/: logger.py
src/tools/ext/: collect_env_details.py
task/cifar10/: stages.py
task/cifar10/config/: baseline.yaml  baseline_adamw.yaml  baseline_adamw_rev_a.yaml  baseline_adamw_rev_a_submit.yaml  baseline_local.yaml  baseline_rev_a.yaml  composite.yaml  early_stopping_rev_a.yaml  resnet18.yaml  resnet18_local.yaml  resnet18_submit.yaml
task/cifar10/config/ancillary/: 1gpu.yaml  20min.yaml  2gpu.yaml  hpc_paths.yaml
task/cifar10/config/cluster/: 15min.yaml  2hr.yaml
task/cifar10/config/distributed/: 1gpu.yaml  2gpu.yaml
task/cifar10/config/paths/: hpc_paths.yaml  local_paths.yaml
task/cifar10/model/: baseline.py  baseline_adamw.py  resnet18.py
tests/: conftest.py  run_tests.sh
tests/integration/sinusoid_example/: test_sinusoid.py
tests/integration/sinusoid_example/task/cosine/: stages.py
tests/integration/sinusoid_example/task/cosine/config/: default.yaml
tests/integration/sinusoid_example/task/cosine/model/: mlp.py
tests/task/cifar10/: stages.py
tests/task/cifar10/config/: baseline.yaml  composite.yaml  early_stopping.yaml  resnet18.yaml  tl_dr.yaml
tests/task/cifar10/config/ancillary/: local_paths.yaml  neptune.yaml
