[metadata]
name = dlhpcstarter
description = Deep Learning and HPC Starter Pack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/csiro-mlai/dl_hpc_starter_pack
author = CSIRO
license = Apache License 2.0
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    dlhpcstarter = dl_hpc_starter_pack.dlhpcstarter:main
