[metadata]
name = dlhpcstarter
description = Deep Learning and HPC Starter Pack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/csiro-mlai/dl_hpc_starter_pack
author = CSIRO
license = Apache License 2.0
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    Bottleneck>=1.3
    GPUtil>=1.4
    hydra-core>=1.2
    neptune-client>=0.16
    numpy>=1.21
    pandas>=1.3
    pytorch-lightning>=1.7
    scipy>=1.7
    torch>=1.12
    torchmetrics>=0.9
    torchvision>=0.13
    transformers>=4.21

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    dlhpcstarter = dl_hpc_starter_pack.dlhpcstarter:main
