[metadata]
name = dlhpcstarter
version = 0.1.7
description = Deep Learning and HPC Starter Pack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/csiro-mlai/dl_hpc_starter_pack
author = CSIRO
license = Apache License 2.0
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    Bottleneck>=1.3.7
    GPUtil>=1.4
    hydra-core>=1.3.2
    lightning>=2.0.1
    munch>=4.0.0
    neptune-client==0.16.18
    numpy==1.23.5
    protobuf==3.20.3
    rich>=13.3.2
    tensorboard>=2.12.0
    torch>=1.13.1
    torchmetrics>=0.11.4

[options.extras_require]
test = pytest

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    dlhpcstarter = dlhpcstarter.__main__:main
